--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -18,3 +18,17 @@ resources:
 - metrics_auth_role.yaml
 - metrics_auth_role_binding.yaml
 - metrics_reader_role.yaml
+# For each CRD, "Admin", "Editor" and "Viewer" roles are scaffolded by
+# default, aiding admins in cluster management. Those roles are
+# not used by the cluster-api-provider-kvm itself. You can comment the following lines
+# if you do not want those helpers be installed with your Project.
+- kvmcluster_admin_role.yaml
+- kvmcluster_editor_role.yaml
+- kvmcluster_viewer_role.yaml
+- kvmmachine_admin_role.yaml
+- kvmmachine_editor_role.yaml
+- kvmmachine_viewer_role.yaml
+- kvmvirtualmachine_admin_role.yaml
+- kvmvirtualmachine_editor_role.yaml
+- kvmvirtualmachine_viewer_role.yaml
+
