--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -1,11 +1,35 @@
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  labels:
-    app.kubernetes.io/name: cluster-api-provider-kvm
-    app.kubernetes.io/managed-by: kustomize
   name: manager-role
 rules:
-- apiGroups: [""]
-  resources: ["pods"]
-  verbs: ["get", "list", "watch"]
+- apiGroups:
+  - kvm.cluster.x-k8s.io
+  resources:
+  - kvmclusters
+  - kvmmachines
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - kvm.cluster.x-k8s.io
+  resources:
+  - kvmclusters/finalizers
+  - kvmmachines/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - kvm.cluster.x-k8s.io
+  resources:
+  - kvmclusters/status
+  - kvmmachines/status
+  verbs:
+  - get
+  - patch
+  - update
