--- a/config/crd/bases/kvm.cluster.x-k8s.io_kvmmachines.yaml
+++ b/config/crd/bases/kvm.cluster.x-k8s.io_kvmmachines.yaml
@@ -39,13 +39,113 @@ spec:
           spec:
             description: KVMMachineSpec defines the desired state of KVMMachine.
             properties:
-              foo:
-                description: Foo is an example field of KVMMachine. Edit kvmmachine_types.go
-                  to remove/update
+              cloudInit:
+                description: CloudInit is the cloud-init user data
                 type: string
+              cpus:
+                description: CPUs is the number of CPU cores
+                type: integer
+              diskSize:
+                description: DiskSize is the disk size (e.g., "20Gi")
+                type: string
+              host:
+                description: Host is the blade server hostname or IP running the VM
+                type: string
+              imagePath:
+                description: ImagePath is the path to the base qcow2 image
+                type: string
+              memory:
+                description: Memory is the memory size (e.g., "8Gi")
+                type: string
+              networkInterface:
+                description: NetworkInterface is the network configuration
+                properties:
+                  bridge:
+                    type: string
+                required:
+                - bridge
+                type: object
+              vmName:
+                description: VMName is the name of the VM in libvirt
+                type: string
+            required:
+            - cloudInit
+            - cpus
+            - diskSize
+            - host
+            - imagePath
+            - memory
+            - networkInterface
+            - vmName
             type: object
           status:
             description: KVMMachineStatus defines the observed state of KVMMachine.
+            properties:
+              conditions:
+                description: Conditions store the status conditions of the VM
+                items:
+                  description: Condition contains details for one aspect of the current
+                    state of this API Resource.
+                  properties:
+                    lastTransitionTime:
+                      description: |-
+                        lastTransitionTime is the last time the condition transitioned from one status to another.
+                        This should be when the underlying condition changed.  If that is not known, then using the time when the API field changed is acceptable.
+                      format: date-time
+                      type: string
+                    message:
+                      description: |-
+                        message is a human readable message indicating details about the transition.
+                        This may be an empty string.
+                      maxLength: 32768
+                      type: string
+                    observedGeneration:
+                      description: |-
+                        observedGeneration represents the .metadata.generation that the condition was set based upon.
+                        For instance, if .metadata.generation is currently 12, but the .status.conditions[x].observedGeneration is 9, the condition is out of date
+                        with respect to the current state of the instance.
+                      format: int64
+                      minimum: 0
+                      type: integer
+                    reason:
+                      description: |-
+                        reason contains a programmatic identifier indicating the reason for the condition's last transition.
+                        Producers of specific condition types may define expected values and meanings for this field,
+                        and whether the values are considered a guaranteed API.
+                        The value should be a CamelCase string.
+                        This field may not be empty.
+                      maxLength: 1024
+                      minLength: 1
+                      pattern: ^[A-Za-z]([A-Za-z0-9_,:]*[A-Za-z0-9_])?$
+                      type: string
+                    status:
+                      description: status of the condition, one of True, False, Unknown.
+                      enum:
+                      - "True"
+                      - "False"
+                      - Unknown
+                      type: string
+                    type:
+                      description: type of condition in CamelCase or in foo.example.com/CamelCase.
+                      maxLength: 316
+                      pattern: ^([a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*/)?(([A-Za-z0-9][-A-Za-z0-9_.]*)?[A-Za-z0-9])$
+                      type: string
+                  required:
+                  - lastTransitionTime
+                  - message
+                  - reason
+                  - status
+                  - type
+                  type: object
+                type: array
+              ipAddress:
+                description: IPAddress is the VM’s IP address
+                type: string
+              ready:
+                description: Ready indicates if the VM is running and accessible
+                type: boolean
+            required:
+            - ready
             type: object
         type: object
     served: true
